[package]
name = "yew-more-hooks"
version = "0.4.0"
edition = "2024"
authors = [
    "Jens Reimann <ctron@dentrassi.de>"
]
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "hooks"]
license = "Apache-2.0"
readme = "README.md"
description = "More hooks for Yew"
repository = "https://github.com/ctron/yew-more-hooks"

[dependencies]
gloo-utils = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
yew = "0.22"

log = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
yew-hooks = { version = "0.4", optional = true }

[features]
default = [
    "log",
    "async",
    "page_state",
    "breakpoint",
]
async = ["wasm-bindgen-futures", "yew-hooks"]
breakpoint = ["yew-hooks"]
page_state = ["serde"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]

[package.metadata.docs.rs]
all-features = true

[patch.crates-io]
#yew-hooks = { git = "https://github.com/ctron/yew-hooks", rev = "0ba4f5c5f331650b1608ad830dfac0ef63700e8d" }
